...
    "create-profile": "Create profile",
    "create-profile-password-info-box-title": "About your profile password",
    "create-profile-password-info-box-description": "Your Status keys are the foundation of your self-sovereign identity in Web3. You have complete control over these keys, which you can use to sign transactions, access your data, and interact with Web3 services.\n\nYour keys are always securely stored on your device and protected by your Status profile password. Status doesn't know your password 
    "create-a-pin": "Create a 6-digit passcode",
    "create-a-puk": "Create a 12-digit PUK",
    "create-group-chat": "Create group chat",
    "create-multiaccount": "Generate keys",
    "create-new-key": "Get new keys",
    "create-pin": "Create 6-digit passcode",
    "create-pin-description": "You'll need your card + this 6-digit passcode to unlock Status and to confirm transactions",
    "created-group-chat-description": "You created the group {{group-name}}",
    "members-count": "{{count}} members",
    "cryptokitty-name": "CryptoKitty #{{id}}",
...
    "enter-pair-code-description": "Pairing code can be set from an already paired Status client",
    "enter-password": "Enter password",
    "enter-password-migration-prompt": "Enter your password to move contacts, chats and settings along with your keys",
    "migration-successful": "Migration successful",
    "migration-successful-text": "Account succesfully migrated to Keycard",
    "skip": "Skip",
    "password-placeholder": "Password...",
    "confirm-password-placeholder": "Confirm your password...",
    "ens-or-chat-key": "ENS or Chat key",
    "user-found": "User found",
    "enter-pin": "Enter 6-digit passcode",
    "enter-puk-code": "Enter PUK code",
    "enter-puk-code-description": "6-digit passcode has been blocked.\n Please enter PUK code to unblock passcode.",
    "enter-recipient-address-or-username": "Enter address or username of the recipient",
...
    "generate-new-key": "Generate keys",
    "your-keys": "Your keys",
    "generating-codes-for-pairing": "> Downloading product software to card\n > Generating unlocking & pairing codes",
    "generating-keys": "Generating keys...",
    "you-will-need-this-code": "You'll need this code to open Status and sign transactions",
    "generating-mnemonic": "Generating seed phrase",
    "get-started": "Get started",
    "get-status-at": "Get Status at http://status.im",
    "get-stickers": "Get Stickers",
    "gif": "GIF",
    "go-to-settings": "Go to Settings...",
    "goerli-network": "Goerli network",
    "got-it": "Got it",
...
    "new-group": "New group",
    "new-group-chat": "New group chat",
    "new-network": "New network",
    "new-pin-description": "Enter new 6-digit passcode",
    "new-puk-description": "Enter new 12-digit PUK",
    "new-public-group-chat": "Join public chat",
    "next": "Next",
    "no": "No",
    "no-collectibles": "No collectibles",
    "no-keycard-applet-on-card": "No Keycard applet on card",
    "no-pairing-slots-available": "This card is already paired to 5 devices and cannot pair to this one. Please use one of the paired devices, log in with this card and free up pairing slots on the card",
    "no-result": "No results",
    "no-tokens-found": "No tokens found",
...
    "enter-a-chat-key": "Add a chatkey or scan a QR",
    "you-dont-have-contacts": "You don’t have any contacts yet.",
    "set-max": "Set max",
    "continue-anyway": "Continue anyway",
    "private-notifications": "Private notifications",
    "private-notifications-descr": "Status will notify you about new messages. You can edit your notification preferences later in settings.",
    "maybe-later": "Maybe later",
    "join": "Join",
    "registered": "registered",
    "not-registered": "not registered",
    "audio-recorder-error": "Recorder error",
    "audio-recorder": "Recorder",
    "audio-recorder-max-ms-reached": "Maximum recording time reached",
...
